Ajutes responsive para navegación de artículos y estilos en pagina de contacto

--- a/nosotros.html
+++ b/nosotros.html
@@ -30,9 +30,9 @@
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="">Nosotros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./producto.html">Productos</a></li>
-                    <li><a href="">Ofertas</a></li>
+                    <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
