--- a/ofertas.html
+++ b/ofertas.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./css/generales.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/breadcrumbs.css">
-    <link rel="stylesheet" href="./css/estilosProducto.css">
-    <link rel="stylesheet" href="./css/queriesProducto.css">
+    <link rel="stylesheet" href="./css/estilosHome.css">
+    <link rel="stylesheet" href="./css/queriesHome.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <title>Producto</title>
+    <title>Ofertas</title>
 </head>
 <body>
     <header id="header" class="header">
@@ -50,82 +50,16 @@
     </header>
     <section class="sectionContenedor breadcrumb">
         <div class="ruta">
-            <a href="">Tienda</a>
+            <a href="">Inicio</a>
             <p>/</p>
-            <a href="">Accesorios</a>
-            <p>/</p>
-            <a href="">Producto</a>
+            <a href="">Ofertas</a>
         </div>
     </section>
-    <section class="sectionContenedor producto">
-        <h2 class="tituloResponsive">Joystick Ps5 Inalámbrico Sony PlayStation DualSense CFI-ZCT1W White/Black</h2>
-        <div class="imagenesProducto">
-            <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-            <img class="imgThumbnail2" src="./img/imgProducto2.svg" alt="" class="img">
-            <img class="imgThumbnail3" src="./img/imgProducto3.svg" alt="" class="img">
-            <img class="imgThumbnail4" src="./img/imgProducto4.svg" alt="" class="img">
-            <img class="imgPrincipal" src="./img/imgProductoPrincipal.svg" alt="" class="imgPrincipal">
-        </div>
-        <div class="infoProducto">
-            <h2>Joystick Ps5 Inalámbrico Sony PlayStation DualSense CFI-ZCT1W White/Black</h2>
-            <div class="reseñaStock">
-                <img src="./img/reseñasProducto.svg" alt="" class="stars">
-                <p class="cantReview">(153 Reseñas)</p>
-                <p class="stock">| En Stock</p>
-            </div>
-            <div class="precio">
-                <p class="precioRegular">$1499</p>
-            </div>
-            <p class="descripcionCorta">Experimenta una experiencia de juego más profunda y envolvente que hace que la acción cobre vida en las palmas de tus manos. El control inalámbrico DualSense™ ofrece retroalimentación háptica inmersiva, gatillos adaptativos dinámicos y un micrófono incorporado, todo integrado en un diseño icónico y cómodo.</p>
-            <div class="caracteristicas">
-                <p>Lo que tenés que saber de este producto</p>
-                <ul>
-                    <li>Cuenta con Bluetooth</li>
-                    <li>Pantalla táctil</li>
-                    <li>Mando inalámbrico</li>
-                    <li>Compatible con: Computadoras</li>
-                    <li>Con sistema de vibración incorporado</li>
-                    <li>Cuienta con manual</li>
-                    <li>Diversión garantizada con tu joystick PlayStation</li>
-                    <li>Diseño ergonómico</li>
-                </ul>
-            </div>
-            <div class="divider"></div>
-
-            <div class="accionesProducto">
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <button class="comprar">Comprar ahora</button>
-                <button class="wishlist">
-                    <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                </button>
-            </div>
-            <div class="caracTienda">
-                <div class="item">
-                    <img src="./img/Caract1.svg" alt="Envio rapido y gratis">
-                    <div class="itemInfo">
-                        <h3>Envío rápido y gratis</h3>
-                        <p>Envío gratis en ordenes superior a $149</p>
-                    </div>
-                    </div>
-                <div class="item">
-                    <img src="./img/Caract3.svg" alt="Garantia">
-                    <div class="itemInfo">
-                        <h3>Garantía</h3>
-                        <p>Contamos con garantía de 30 días</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="sectionContenedor masVendidos">
+    <section class="sectionContenedor nuestrosProductos">
         <header>
             <div class="titulos">
-                <h4>Tal vez te interesen</h4>
-                <h2>Productos Relacionados</h2>
+                <h4>Productos</h4>
+                <h2>Explora nuestros productos</h2>
             </div>
             <nav>
                 <a href=""><</a>
@@ -134,40 +68,137 @@
         </header>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Teclado Mecánico RGB</h3>
-            <p class="productoDescripción">Rendimiento y estilo en cada pulsación, ideal para trabajar y jugar.</p>
+            <h3>Mini Proyector Portátil 1080p</h3>
+            <p class="productoDescripción">Perfecto para presentaciones o entretenimiento en cualquier lugar.</p>
             <div class="precio">
-                <p class="precioDescuento">$89</p>
+                <p class="precioDescuento">$189</p>
             </div>
             <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Audífonos Noise Cancelling</h3>
-            <p class="productoDescripción">Silencia el ruido exterior y concéntrate en tu trabajo.</p>
+            <h3>Pizarra Digital Interactiva</h3>
+            <p class="productoDescripción">Ideal para reuniones colaborativas y presentaciones en equipo.</p>
             <div class="precio">
-                <p class="precioDescuento">$119</p>
+                <p class="precioDescuento">$419</p>
             </div>
             <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Escritorio Ajustable PRO</h3>
-            <p class="productoDescripción">Trabajá de pie o sentado con este escritorio ajustable en altura.</p>
+            <h3>Router WiFi 6 de Alta Velocidad</h3>
+            <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
             <div class="precio">
-                <p class="precioDescuento">$249</p>
+                <p class="precioDescuento">$129</p>
             </div>
             <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Mouse Ergonómico Vertical</h3>
-            <p class="productoDescripción">Cuida tu muñeca con este mouse ergonómico de diseño vertical.</p>
+            <h3>Almohadilla de Escritorio Antideslizante</h3>
+            <p class="productoDescripción">Protege tu escritorio y mejora la comodidad de uso.</p>
+            <div class="precio">
+                <p class="precioDescuento">$29</p>
+            </div>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Organizador de Cables Magnético</h3>
+            <p class="productoDescripción">Mantén tus cables organizados y sin enredos en tu espacio de trabajo.</p>
             <div class="precio">
                 <p class="precioDescuento">$49</p>
             </div>
             <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Cámara Web 4K con Micrófono</h3>
+            <p class="productoDescripción">Calidad de video profesional para videollamadas y transmisiones en vivo.</p>
+            <div class="precio">
+                <p class="precioDescuento">$159</p>
+            </div>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Pad de Carga Inalámbrica Rápida</h3>
+            <p class="productoDescripción">Carga tu teléfono mientras trabajas sin necesidad de cables.</p>
+            <div class="precio">
+                <p class="precioDescuento">$69</p>
+            </div>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Estación de Anclaje USB-C Multifuncional</h3>
+            <p class="productoDescripción">Conecta todos tus dispositivos con un solo puerto. Ideal para laptops modernas.</p>
+            <div class="precio">
+                <p class="precioDescuento">$79</p>
+            </div>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
+        </article>
+    </section>
+    <section class="sectionContenedor ultimosIngresos">
+        <header>
+            <div class="titulos">
+                <h4>Destacados</h4>
+                <h2>Últimos Ingresos</h2>
+            </div>
+            <nav>
+                <a href=""><</a>
+                <a href="">></a>
+            </nav>
+        </header>
+        <article class="flyerNuevosProductos1">
+            <img src="./img/UltimosProductos1.svg" alt="PlayStation 5" class="productoImagen">
+            <div class="infoTexto">
+                <h3>PlayStation 5</h3>
+                <p>En sus versiones en Blanco y Negro</p>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
+            </div>
+        </article>
+        <article class="flyerNuevosProductos2">
+            <img src="./img/UltimosProductos2.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+            <div class="infoTexto">
+                <h3>Parlante JBL</h3>
+                <p>Sonido potente y portátil para cualquier ocasión.</p>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
+            </div>
+        </article>
+        <article class="flyerNuevosProductos3">
+            <img src="./img/UltimosProductos3.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+            <div class="infoTexto">
+                <h3>Asistente Virtual Alexa</h3>
+                <p>Controla tu hogar inteligente con solo tu voz.</p>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
+            </div>
+        </article>
+        <article class="flyerNuevosProductos4">
+            <img src="./img/UltimosProductos4.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+            <div class="infoTexto">
+                <h3>Monitor Gaming</h3>
+                <p>Ideal para una experiencia de juego inmersiva.</p>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
+            </div>
+        </article>
+    </section>
+    <section class="sectionContenedor caracteristicas">
+        <div class="item">
+            <img src="./img/Caract1.svg" alt="Envio rapido y gratis">
+            <h3>Envío rápido y gratis</h3>
+            <p>Envío gratis en ordenes superior a $149</p>
+        </div>
+        <div class="item">
+            <img src="./img/Caract2.svg" alt="Atencion 24/7">
+            <h3>Atención 24/7</h3>
+            <p>Servicio de atención 24/7</p>
+        </div>
+        <div class="item">
+            <img src="./img/Caract3.svg" alt="Garantia">
+            <h3>Garantía</h3>
+            <p>Contamos con garantía de 30 días</p>
+        </div>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
@@ -221,6 +252,5 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/validarMail.js"></script>
 </body>
 </html>
