--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./producto.html">Productos</a></li>
-                    <li><a href="">Ofertas</a></li>
+                    <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
@@ -96,6 +96,7 @@
                     <textarea placeholder="Mensaje" name="mensaje" required></textarea>
                 </div>
                 <button type="submit">Enviar Mensaje</button>
+                <p class="disclaimer"><span>WorkWave Store te informa que los datos personales proporcionados serán utilizados para gestionar tu suscripción y enviarte boletines con información y ofertas relacionadas con nuestros productos o servicios. Puedes ejercer tus derechos de acceso, rectificación, limitación o supresión escribiéndonos. Consulta más detalles en nuestra política de privacidad.</span></p>
             </form>
         </div>
     </section>
