--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./producto.html">Productos</a></li>
-                    <li><a href="">Ofertas</a></li>
+                    <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
