Ajustes responsives en Contacto y se añado input de aceptación de terminos y condiciones

--- a/contacto.html
+++ b/contacto.html
@@ -95,8 +95,14 @@
                 <div class="form-group">
                     <textarea placeholder="Mensaje" name="mensaje" required></textarea>
                 </div>
-                <button type="submit">Enviar Mensaje</button>
-                <p class="disclaimer"><span>WorkWave Store te informa que los datos personales proporcionados serán utilizados para gestionar tu suscripción y enviarte boletines con información y ofertas relacionadas con nuestros productos o servicios. Puedes ejercer tus derechos de acceso, rectificación, limitación o supresión escribiéndonos. Consulta más detalles en nuestra política de privacidad.</span></p>
+                <div class="form-group-2">
+                    <div class="acceptance">
+                        <input type="checkbox" name="aceptación" id="aceptación" required>
+                        Acepto los términos y condiciones.
+                    </div>
+                    <button type="submit">Enviar Mensaje</button>
+                </div>
+                    <p class="disclaimer"><span>WorkWave Store te informa que los datos personales proporcionados serán utilizados para gestionar tu suscripción y enviarte boletines con información y ofertas relacionadas con nuestros productos o servicios. Puedes ejercer tus derechos de acceso, rectificación, limitación o supresión escribiéndonos. Consulta más detalles en nuestra política de privacidad.</span></p>
             </form>
         </div>
     </section>
