Agregamos paginas legales y ajustes de enlaces en el footer de todas las páginas

--- a/politicasDePrivacidad.html
+++ b/politicasDePrivacidad.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./css/generales.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/breadcrumbs.css">
-    <link rel="stylesheet" href="./css/estilosNosotros.css">
-    <link rel="stylesheet" href="./css/queriesNosotros.css">
+    <link rel="stylesheet" href="./css/estilospoliticasDePrivacidad.css">
+    <link rel="stylesheet" href="./css/queriespoliticasDePrivacidad.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <title>Nosotros</title>
+    <title>Políticas de Privacidad</title>
 </head>
 <body>
     <header id="header" class="header">
@@ -45,48 +45,45 @@
                 </div>
                 <a class="iconMenu" href="">❤️</a>
                 <a class="iconMenu" href="">🛒</a>
-            </div> 
+            </div>    
         </div>
     </header>
     <section class="sectionContenedor breadcrumb">
         <div class="ruta">
-            <a href="">Home</a>
+            <a href="">Inicio</a>
             <p>/</p>
-            <a href="">Nosotros</a>
+            <a href="">Políticas de Privacidad</a>
         </div>
     </section>
-    <section class="sectionContenedor nosotros">
-        <div class="texto">
-            <h2>Nuestra Historia</h2>
-            <p>Desde nuestra fundación en Argentina, en 2015, WorkWave se ha convertido en un punto de referencia para freelancers y nómadas digitales alrededor del mundo. Nacimos con una visión clara: apoyar a quienes eligen una vida de independencia y flexibilidad, ofreciéndoles productos y herramientas diseñados especialmente para hacer su camino más fácil y eficiente.</p>
-            <p>Hoy en día, trabajamos con más de 10,000 vendedores y alrededor de 300 marcas que comparten nuestro compromiso de calidad. A través de nuestra plataforma, miles de profesionales encuentran todo lo necesario para llevar su oficina a cualquier parte, ya sea una mochila funcional, tecnología portátil o recursos para trabajar cómodamente desde cualquier rincón del mundo.</p>
-            <p>Con envíos a nivel global y más de un millón de productos en constante renovación, WorkWave está aquí para ayudarte a que nada te detenga. Nuestra comunidad de clientes en expansión es nuestro impulso para innovar y seguir ofreciendo una selección pensada para los desafíos y sueños de los trabajadores modernos.</p>
-        </div>
-        <div class="img">
-            <img src="./img/nosotros.jpg" alt="">
-        </div>
-    </section>
-    <section class="sectionContenedor caracteristicas">
-        <div class="item">
-            <img src="./img/Caract1Nosotros.svg" alt="Freelances felices">
-            <h3>27.5</h3>
-            <p>Freelances felices</p>
-        </div>
-        <div class="item">
-            <img src="./img/Caract2Nosotros.svg" alt="Ventas mensuales">
-            <h3>33k</h3>
-            <p>Ventas mensuales</p>
-        </div>
-        <div class="item">
-            <img src="./img/Caract3Nosotros.svg" alt="Usuarios fieles">
-            <h3>45.5k</h3>
-            <p>Usuarios fieles</p>
-        </div>
-        <div class="item">
-            <img src="./img/Caract4Nosotros.svg" alt="Articulos nuevos">
-            <h3>100k</h3>
-            <p>Articulos nuevos</p>
-        </div>
+    <section class="sectionContenedor sectionTexto">
+        <h1 class="titulos">Políticas de Privacidad de WorkWave Store</h1>
+        <p>En WorkWave Store, valoramos tu privacidad y nos comprometemos a proteger la información que compartís con nosotros. A continuación, te explicamos cómo manejamos tus datos personales y qué derechos tenés sobre ellos.</p>
+        <h2 class="titulos">1. Recopilación de Información</h2>
+        <p>Cuando navegás en nuestra tienda, comprás productos o te suscribís a nuestra newsletter, podemos recopilar información como tu nombre, correo electrónico, dirección y datos de pago. Esta información nos ayuda a procesar tus pedidos y mejorar tu experiencia de compra.</p>
+        <h2 class="titulos">2. Uso de los Datos</h2>
+        <p>Los datos que compartís con nosotros se utilizan para:</p>
+        <ul>
+            <li>Procesar tus pedidos y garantizar entregas precisas.</li>
+            <li>Enviarte actualizaciones sobre tu compra y promociones especiales.</li>
+            <li>Mejorar nuestras ofertas y personalizar tu experiencia en nuestra tienda.</li>
+        </ul>
+        <p>No compartimos tus datos personales con terceros fuera de WorkWave Store, excepto en casos necesarios para cumplir con la entrega o procesamiento de pagos.</p>
+        <h2 class="titulos">3. Seguridad de los Datos</h2>
+        <p>Implementamos medidas de seguridad técnicas y organizativas para proteger tus datos contra accesos no autorizados, pérdidas o alteraciones. Aunque trabajamos constantemente para garantizar la seguridad, recordá que ningún método de transmisión de datos por internet es 100% seguro.</p>
+        <h2 class="titulos">4. Tus Derechos</h2>
+        <p>Como usuario, tenés derecho a:</p>
+        <ul>
+            <li>Acceder, modificar o eliminar tus datos personales.</li>
+            <li>Retirar tu consentimiento para recibir comunicaciones de marketing en cualquier momento.</li>
+            <li>Presentar una reclamación ante las autoridades correspondientes si considerás que no se respetan tus derechos.</li>
+        </ul>
+        <h2 class="titulos">5. Cookies</h2>
+        <p>Nuestro sitio utiliza cookies para mejorar tu experiencia de navegación, recordar tus preferencias y ofrecerte contenido personalizado. Podés configurar tu navegador para rechazar las cookies, aunque esto podría limitar algunas funcionalidades de la tienda.</p>
+        <h2 class="titulos">6. Cambios en la Política</h2>
+        <p>Nos reservamos el derecho de actualizar estas políticas en cualquier momento. Los cambios serán publicados en esta página, por lo que te recomendamos revisarla periódicamente.</p>
+        <h2 class="titulos">Contacto</h2>
+        <p>Si tenés preguntas sobre nuestras Políticas de Privacidad, podés contactarnos a través de nuestro formulario en la página Contacto o escribiéndonos a info@workwave.com.ar.</p>
+        <p>Gracias por confiar en WorkWave Store. 💼🌍</p>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
@@ -140,6 +137,5 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/validarMail.js"></script>
 </body>
 </html>
