--- a/producto.html
+++ b/producto.html
@@ -191,18 +191,18 @@
             </div>
             <div class="col col3">
                 <h3>Cuenta</h3>
-                <a class="footerLink" href="">Mi cuenta</a>
-                <a class="footerLink" href="">Iniciar Sesion / Registro</a>
-                <a class="footerLink" href=""> Carrito</a>
-                <a class="footerLink" href="">Lista de Deseos</a>
-                <a class="footerLink" href="">Tienda</a>
+                <a class="footerLink" href="./miCuenta.html">Mi cuenta</a>
+                <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
+                <a class="footerLink" href="./carrito.html"> Carrito</a>
+                <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
+                <a class="footerLink" href="./productos.html">Tienda</a>
             </div>
             <div class="col col4">
                 <h3>Enlaces rápidos</h3>
-                <a class="footerLink" href="">Políticas de Privacidad</a>
-                <a class="footerLink" href="">Términos de uso</a>
-                <a class="footerLink" href="">Preguntas Frecuentes</a>
-                <a class="footerLink" href="">Contacto</a>
+                <a class="footerLink" href="./politicasDePrivacidad.html">Políticas de Privacidad</a>
+                <a class="footerLink" href="./terminosDeUso.html">Términos de uso</a>
+                <a class="footerLink" href="./preguntasFrecuentes.html">Preguntas Frecuentes</a>
+                <a class="footerLink" href="./contacto.html">Contacto</a>
             </div>
             <div class="col col5">
                 <h3>Descarga la App</h3>
