--- a/ofertas.html
+++ b/ofertas.html
@@ -226,7 +226,7 @@
                 <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
                 <a class="footerLink" href="./carrito.html"> Carrito</a>
                 <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
-                <a class="footerLink" href="./productos.html">Tienda</a>
+                <a class="footerLink" href="./producto.html">Tienda</a>
             </div>
             <div class="col col4">
                 <h3>Enlaces rápidos</h3>
