--- a/politicasDePrivacidad.html
+++ b/politicasDePrivacidad.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./css/generales.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/breadcrumbs.css">
-    <link rel="stylesheet" href="./css/estilospoliticasDePrivacidad.css">
-    <link rel="stylesheet" href="./css/queriespoliticasDePrivacidad.css">
+    <link rel="stylesheet" href="./css/estilosLegales.css">
     <link rel="stylesheet" href="./css/footer.css">
     <title>Políticas de Privacidad</title>
 </head>
@@ -111,7 +110,7 @@
                 <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
                 <a class="footerLink" href="./carrito.html"> Carrito</a>
                 <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
-                <a class="footerLink" href="./productos.html">Tienda</a>
+                <a class="footerLink" href="./producto.html">Tienda</a>
             </div>
             <div class="col col4">
                 <h3>Enlaces rápidos</h3>
