simplificamos css en menos hojas de estilo

--- a/preguntasFrecuentes.html
+++ b/preguntasFrecuentes.html
@@ -132,5 +132,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
+    <script src="./js/validarMail.js"></script>
 </body>
 </html>
