Ajustes estilos pantallas 1024px

--- a/login.html
+++ b/login.html
@@ -51,23 +51,22 @@
             <img src="./img/login.svg" alt="">
         </div>
         <div class="contenedorForm login">
-            <h2>Crea una cuenta</h2>
-            <p>Completa tus datos</p>
+            <h2 class="titulo">Crea una cuenta</h2>
+            <p class="texto">Completa tus datos</p>
         <form action="#" class="form">
             <input type="text" placeholder="nombre" required>
             <input type="email" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
             <button type="submit" class="btn-primary">Crear una cuenta</button>
-            <button type="button" class="btn-google">
+            <button type="button" class="btnGoogle">
                 <img src="https://img.icons8.com/color/16/000000/google-logo.png" alt="Google logo"> Inicia sesion con Google
             </button>
         </form>
-        <p class="footer-text">
+        <p class="footerTexto">
             ¿Ya tienes una cuenta? <a href="#">Iniciar Sesion</a>
         </p>
         </div>
     </section>
-    
     <footer>
         <div class="sectionContenedor footerPrincipal">
             <div class="col col1">
