ajuste enlace footer

--- a/contacto.html
+++ b/contacto.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col col3">
                 <h3>Cuenta</h3>
-                <a class="footerLink" href="./miCuenta.html">Mi cuenta</a>
+                <a class="footerLink" href="./login.html">Mi cuenta</a>
                 <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
                 <a class="footerLink" href="./carrito.html"> Carrito</a>
                 <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
