ajuste de estilos en los campos del form

--- a/login.html
+++ b/login.html
@@ -54,9 +54,9 @@
             <h2 class="titulo">Crea una cuenta</h2>
             <p class="texto">Completa tus datos</p>
         <form action="#" class="form">
-            <input type="text" placeholder="nombre" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
+            <input class="campos" type="text" placeholder="nombre" required>
+            <input class="campos" type="email" placeholder="Email" required>
+            <input class="campos" type="password" placeholder="Password" required>
             <button type="submit" class="btn-primary">Crear una cuenta</button>
             <button type="button" class="btnGoogle">
                 <img src="https://img.icons8.com/color/16/000000/google-logo.png" alt="Google logo"> Inicia sesion con Google
