Añadimos funcionalidad a botones cantidad

--- a/carrito.html
+++ b/carrito.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <div class="precio">
@@ -223,6 +223,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/validarMail.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
