--- a/contacto.html
+++ b/contacto.html
@@ -166,6 +166,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/validarMail.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
