--- a/producto.html
+++ b/producto.html
@@ -102,7 +102,7 @@
             <div class="accionesProducto">
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <button class="comprar">Comprar ahora</button>
@@ -228,6 +228,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/validarMail.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
