--- a/carrito.html
+++ b/carrito.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <div class="precio">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <div class="precio">
@@ -120,7 +120,7 @@
                 </div>
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <div class="precio">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="selectorCantidad">
                     <button class="decrementar">−</button>
-                    <span class="cantidad">1</span>
+                    <span class="cantidadProducto">1</span>
                     <button class="incrementar">+</button>
                 </div>
                 <div class="precio">
