Imagenes de productos, ajustes en variables y cambios varios

--- a/contacto.html
+++ b/contacto.html
@@ -93,6 +93,7 @@
             </div>
         </div>
         <div class="formContacto">
+            <p style="position:block;">Texto</p>
             <form action="https://formspree.io/f/xldejveq" method="POST">
                 <div class="form-group">
                     <input type="text" placeholder="Nombre *" name="nombre" required>
@@ -126,7 +127,7 @@
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="envioSatisfactorio" class="mensajeSatisfactorio">Mensaje</p>
+                <p id="alertaMensaje" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
