--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </nav>
             </header>
             <article class="cardProducto">
-                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <img src="./img/productos/Auriculares Huawei Freebuds 6I Black.webp" alt="">
                 <h3>Laptop Pro 14"</h3>
                 <p class="productoDescripción">Ideal para edición y programación. Potencia y portabilidad.</p>
                 <div class="precio">
@@ -589,7 +589,7 @@
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="envioSatisfactorio" class="mensajeSatisfactorio">Mensaje</p>
+                <p id="alertaMensaje" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
