--- a/terminosDeUso.html
+++ b/terminosDeUso.html
@@ -107,7 +107,7 @@
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="envioSatisfactorio" class="mensajeSatisfactorio">Mensaje</p>
+                <p id="alertaMensaje" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
