--- a/contacto.html
+++ b/contacto.html
@@ -167,6 +167,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
