ajuste de archivo js en todas las páginas

--- a/nosotros.html
+++ b/nosotros.html
@@ -147,6 +147,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
