funcion cantidadProductos agregada al main.js

--- a/preguntasFrecuentes.html
+++ b/preguntasFrecuentes.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./producto.html">Productos</a></li>
+                    <li><a href="./producto.html">Producto</a></li>
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
@@ -140,6 +140,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
