--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <title>Carrito</title>
 </head>
-<body>
+<body class="carrito">
     <header id="header" class="header">
         <div class="sectionContenedor headerContenedor">
             <div class="logo">
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./producto.html">Productos</a></li>
+                    <li><a href="./producto.html">Producto</a></li>
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
@@ -223,6 +223,6 @@
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
     </footer>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
